[project]
name = "myblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.1",
    "einops>=0.8.2",
    "equinox>=0.13.4",
    "gpytorch>=1.14.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "numpyro>=0.19.0",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "pyro-ppl>=1.9.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]
